fix code z-index

--- a/docs/.vuepress/theme/styles/content.styl
+++ b/docs/.vuepress/theme/styles/content.styl
@@ -225,13 +225,13 @@ div[class*="language-"]
         user-select none
       .line-number
         position relative
-        z-index 4
+        z-index 2
         user-select none
         font-size 0.85em
     &::after
       content ''
       position absolute
-      z-index 2
+      z-index 1
       top 0
       left 0
       width $lineNumbersWrapperWidth
